quorum/test/tests/other/Fail/ConstantObjectsReassignInConstructor.quorum
/*
Expected output: should not compile
*/

use Libraries.System.File
use Libraries.Compute.Random
use Libraries.Compute.Math

class Main
    constant File file
    constant Math m
    
    on create
        Math math2
        m = math2
        file = undefined
        File f2
        file = f2
    end

    action Main
        constant Random r
        Random r2
        r = r2
    end
end